# xchratlas

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
config/: eqtl_priority_studies.csv  panel_blood_biochemistry_core.csv  panel_expanded.csv  panel_mind_focus.csv  panel_mind_risk_core.csv  panel_replacement_probe.csv  panel_sleep_risk_focus.csv  panel_small.csv  par_regions_grch37.tsv  scoring_weights.yml
docs/: FRONTEND_DATA_CONTRACT.md
scripts/: 00_fetch_panukb_manifests.py  01_select_seed_traits.py  02_extract_panukb_x.py  03_build_x_gene_catalog.py  04_prepare_eqtl_index.py  05_call_x_loci.py  06_fetch_eqtl_region_hits.py  07_map_loci_to_genes.py  08_export_release_tables.py  09_compare_release_panels.py  10_prepare_independent_set_panel.py  11_split_selected_traits.py  12_merge_panel_shards.py  13_generate_static_site.py  14_export_frontend_bundle.py
site/: README.md  index.html  panel.html  trait.html
site/css/: style.css
site/data/: manifest.json
site/data/panels/panel_blood_biochemistry_core/: summary.json  traits.json
site/data/panels/panel_expanded/: summary.json  (+1 more)
site/js/: app.js  panel.js  theme.js  trait.js
src/xatlas/: __init__.py  constants.py  eqtl.py  frontend_bundle.py  io.py  loci.py  region.py  scoring.py  settings.py  site.py  variant_bridge.py
tests/: test_eqtl.py  test_eqtl_fetch.py  test_frontend_bundle.py  test_gene_mapping.py  test_loci.py  test_panel_comparison.py  test_region.py  test_release_export.py  test_scoring.py  test_site_generation.py  test_variant_bridge.py
(+233 files in other folders)
